@@ -1,0 +1,2 @@
+/etc/krb.conf.debathena
+/etc/krb.realms.debathena
