@@ -3,8 +3,11 @@ debathena-kerberos-config (1.15) UNRELEASED; urgency=low
   * Switch from control.in to control (Trac: #561)
   * Bump Standards-Version to 3.9.3
   * Bump compat level to 7
+  * Drop Build-dependency on maybe-krb4-config
+  * Switch from CDBS to dh7
+  * Fix syntax error in copyright file
 
- -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:38:38 -0400
+ -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 16:39:41 -0400
 
 debathena-kerberos-config (1.14) unstable; urgency=low
 
